tasksIdCompletedPut.ts + types
